# sentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_rules_escalation_columns.py  003_add_model_used_column.py
dashboard/: app.py
data/kaggle/: README.md
docs/: architecture.md  blog_post.md
notebooks/: model_comparison.ipynb
scripts/: generate_data.py  train_all_models.py
src/sentinel/: config.py  database.py  main.py
src/sentinel/api/: health.py  models.py  router.py  transactions.py
src/sentinel/ml/: evaluate.py  features.py  train.py
src/sentinel/models/: transaction.py
src/sentinel/schemas/: model.py  transaction.py
src/sentinel/services/: drift_detector.py  escalation.py  fraud_scorer.py  model_registry.py  rules_engine.py  transaction_service.py  velocity_tracker.py
tests/: conftest.py  test_drift_detector.py  test_escalation.py  test_fraud_scorer.py  test_health.py  test_model_registry.py  test_rules_engine.py  test_transactions.py
