[project]
name = "sentinel"
version = "0.1.0"
description = "Transaction fraud detection MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "xgboost>=2.1",
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "joblib>=1.4",
    "numpy>=1.26",
    "httpx>=0.28",
    "bentoml>=1.2",
    "mlflow>=2.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]
dashboard = [
    "streamlit>=1.32",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
